@@ -3,6 +3,9 @@ udotool (2.3) UNRELEASED; urgency=medium
   * Low-level commands (`open` and Tcl-style `input`) are hidden under
     ensemble command `udotool`.
   * New low-level command `udotool close`.
+  * New low-level command `udotool sysname`.
+  * New low-level command `udotool protocol`.
+  * Remove variable `::udotool::sys_name`.
 
  -- Alec Kojaev <alec.kojaev@gmail.com>  Mon, 10 Mar 2025 22:27:50 +0300
 
